--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -52,3 +52,7 @@ RSpec/ExampleLength:
 RSpec/Output:
   Exclude:
     - 'spec/support/validator.rb'
+
+# frozen string literals is on by default from Ruby 3.4
+Style/FrozenStringLiteralComment:
+  Enabled: false
