--- a/config/gem_tlc.yaml
+++ b/config/gem_tlc.yaml
@@ -1,12 +1,20 @@
 # Config for testing RSMP Nordic traffic light controller emulator.
 # The settings are used for starting a local supervisor listening for the site tested
 # See https://rsmp-nordic.github.io/rsmp_validator/config/
-port: 13111
+local_supervisor:
+  port: 13111
+  ips: all
+  max_sites: 1
+  log:
+    prefix: '[SUPERVISOR]'
+    acknowledgements: false
+    watchdogs: false
+  guest:
+    intervals:
+      timer: 0.1
+      watchdog: 0.1
 sxl: tlc
 sxl_version: '1.2.1'
-intervals:
-  timer: 0.1
-  watchdog: 0.1
 timeouts:
   watchdog: 1
   acknowledgement: 1
@@ -49,7 +57,3 @@ secrets:
   security_codes:
     1: '1111'
     2: '2222'
-log:
-  prefix: '[SUPERVISOR]'
-  acknowledgements: false
-  watchdogs: false
