--- a/config/cross_rs4s.yaml
+++ b/config/cross_rs4s.yaml
@@ -1,11 +1,15 @@
 # Config for testing Cross RS4S traffic light controller.
 # The settings are used for starting a local supervisor listening for the site tested
 # See https://rsmp-nordic.github.io/rsmp_validator/config/
+local_supervisor:
+  ips: all
+  max_sites: 1
+  guest:
+    intervals:
+      timer: 1
+      watchdog: 60
 sxl: tlc
 sxl_version: '1.2.1'
-intervals:
-  timer: 1
-  watchdog: 60
 timeouts:
   watchdog: 65
   acknowledgement: 5
