--- a/config/kapsch_etx.yaml
+++ b/config/kapsch_etx.yaml
@@ -1,11 +1,15 @@
 # Config for testing Kapsch ETX traffic light controller.
 # The settings are used for starting a local supervisor listening for the site tested
 # See https://rsmp-nordic.github.io/rsmp_validator/config/
+local_supervisor:
+  ips: all
+  max_sites: 1
+  guest:
+    intervals:
+      timer: 1
+      watchdog: 10
 sxl: tlc
 sxl_version: "1.2.1"
-intervals:
-  timer: 1
-  watchdog: 10
 timeouts:
   watchdog: 15
   acknowledgement: 10
