--- a/config/lightmotion_satellite.yaml
+++ b/config/lightmotion_satellite.yaml
@@ -1,12 +1,16 @@
 # Configuration for testing Lightmotion Satellite RSMP proxy software
 # The settings are used for starting a local supervisor listening for the site tested
 # See https://rsmp-nordic.github.io/rsmp_validator/config/
+local_supervisor:
+  ips: all
+  max_sites: 1
+  guest:
+    intervals:
+      timer: 1    # main validator timer resolution in seconds
+      watchdog: 20 # send watchdog every x seconds
 sxl: tlc
 sxl_version: '1.2'
 core_version: '3.2.1'
-intervals:
-  timer: 1    # main validator timer resolution in seconds
-  watchdog: 20 # send watchdog every x seconds
 timeouts:     # Timeouts used when waiting for messages from site.
   watchdog: 60
   acknowledgement: 55
