--- a/config/tecsen_tmacs_supervisor.yaml
+++ b/config/tecsen_tmacs_supervisor.yaml
@@ -1,10 +1,20 @@
 # The settings are used for starting a local tlc emulator connecting to the supervisor system to be tested
 
-type: tlc
-site_id: CAR_TC_001
-supervisors:
-  - ip: rsmp.tmacs.it
-    port: 13111
+local_site:
+  type: tlc
+  site_id: CAR_TC_001
+  supervisors:
+    - ip: rsmp.tmacs.it
+      port: 13111
+  intervals:
+    timer: 0.1
+    watchdog: 1
+    reconnect: 1
+    after_connect: 1
+  secrets:
+    security_codes:
+      1: '1111'
+      2: '2222'
 core_version: '3.2.2'
 sxl: tlc
 sxl_version: '1.2.1'
@@ -36,11 +46,6 @@ signal_plans:
       CAR_SG_002: 'NNNNBN'
       CAR_SG_003: 'BBNNNN'
       CAR_SG_004: 'BNNNNN'
-intervals:
-  timer: 0.1
-  watchdog: 1
-  reconnect: 1
-  after_connect: 1
 timeouts:
   connect: 10
   ready: 100
