start using tlc proxy, wip

--- a/config/gem_tlc.yaml
+++ b/config/gem_tlc.yaml
@@ -5,6 +5,7 @@ local_supervisor:
   port: 13111
   ips: all
   max_sites: 1
+  proxy_type: tlc
   log:
     prefix: '[SUPERVISOR]'
     acknowledgements: false
